--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -1,30 +1,53 @@
-* {
-    margin: 0;
-    padding: 0;
+/* * {
+    margin:0px;
+    padding: 0px;
     box-sizing: border-box;
-  }
+    padding-left: 0px;
+    
+  } */
   
   body {
     font-family: "Roboto", sans-serif;
-    font-size: 16px;
+    font-size: 20px;
   }
   
+  
   h1,
-  h2,
-  h3,
+  
   h4,
   h5,
   h6 {
     font-family: "Playfair Display", serif;
     margin-bottom: 1em;
+
+  }
+  h2{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    
+
+  }
+  h3{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: black;
+    color: white;
+   
   }
   
   p {
     margin-bottom: 1em;
+    display: flex;
+    color: black;
+    font-size: 20px;
   }
   
   nav {
-    background-color: cornsilk;
+    background-color: black;
+    align-items: center;
+    padding-left: 400px;
   }
   
   nav a {
@@ -49,9 +72,7 @@
     background-color: cornsilk;
   }
   
-  #home,
-  #about,
-  #projects {
+  #home {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,39 +81,50 @@
     padding: 1rem;
   }
   
-  #about img {
-    max-height: 50%;
-  }
+ 
   
-  #about a {
-    display: block;
-  }
   
-  #projects {
-    background-color: cornsilk;
-    min-height: 400px;
-  }
   
-  #project-list {
+  
+ 
+  
+ 
+  
+  img.image{
+   padding: 2px;
+    align-items: center;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    max-width: 800px;
+    width: 500px;
+    border-color: black;
+    border: 1000cap;
+    height: 320px;
+    min-width: 410px;
+    
   }
-  
-  .project-item {
+
+  div.CardTemplet{
+    margin: 10px;
+    border: 10px solid;
+    border-radius: 10px;
+    max-width: 600px;
+    max-height: 500px;
+    min-width: 470px;
+    
+    padding: 0px ;
+    background-color: white ;
+    border-spacing: 10px;
+    
+
+  }
+
+  button.button{
     background-color: white;
-    padding: 2rem;
-    margin: 1rem;
+    display: inherit;
   }
-  
-  .technologies span {
-    background-color: lightblue;
-    margin: 0.25rem;
-    padding: 0.5rem;
-    border-radius: 4px;
-    display: inline-block;
+
+  div#geckocards, div#lizardcard, div#snakecard{
+    padding-left: 470px;
+    align-items: center;
   }
   
   @media (min-width: 700px) {
