Read.me added by Nolan

--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -100,7 +100,7 @@
  
   
   img.image{
-   padding: 2px;
+   padding: px;
     align-items: center;
     display: flex;
     width: 500px;
@@ -108,6 +108,7 @@
     border: 1000cap;
     height: 320px;
     min-width: 410px;
+    padding-left: 50px;
     
   }
 
